# spart

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  ROADMAP.md  codecov.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: benches.yml  benchmarks.yml  lints.yml  publish.yml  publish_py.yml  tests.yml
benches/: bench_delete.rs  bench_insert.rs  bench_insert_bulk.rs  bench_knn_search.rs  bench_range_search.rs  bench_serialization.rs  delete_bench.rs  delete_benchmarks.rs  deletion_benchmark.rs  insert_bench.rs  insertion_benchmark.rs  knn_bench.rs  knn_search_bench.rs  knn_search_benchmarks.rs  main.rs  my_benchmark.rs  range_search.rs  range_search_bench.rs  range_search_benchmarks.rs  shared.rs  utils.rs
docs/: README.md
examples/: README.md  kdtree.rs  octree.rs  quadtree.rs  rstar_tree.rs  rtree.rs
pyspart/: Cargo.toml  README.md  pyproject.toml
pyspart/examples/: README.md  kdtree.py  octree.py  quadtree.py  rstartree.py  rtree.py
pyspart/src/: geometry.rs  kdtree.rs  lib.rs  octree.rs  point2d.rs  point3d.rs  quadtree.rs  rstar_tree.rs  rtree.rs  types.rs
pyspart/tests/: test_advanced_scenarios.py  test_bulk_insert.py  test_core_types.py  test_edge_cases.py  test_serialization.py  test_serialization_integration.py
src/: bsp_tree.rs  errors.rs  exceptions.rs  geometry.rs  kd_tree.rs  kdtree.rs  lib.rs  logging.rs  main.rs  octree.rs  quadtree.rs  r_star_tree.rs  r_tree.rs  rstar_tree.rs  rtree.rs  rtree_common.rs  settings.rs
tests/: README.md  common.rs  helpers.rs  integration_test.rs  shared.rs  test_bsp_tree.rs  test_integration_kdtree.rs  test_integration_octree.rs  test_integration_quadtree.rs  test_integration_rstar_tree.rs  test_integration_rtree.rs  test_kd_tree.rs  test_kdtree.rs  test_octree.rs  test_proptest_geometry.rs  test_proptest_kdtree.rs  test_proptest_octree.rs  test_proptest_quadtree.rs  test_proptest_rstar_tree.rs  test_proptest_rtree.rs  test_quadtree.rs  test_r_star_tree.rs  test_r_tree.rs  test_regressions.rs  test_rstar_tree.rs  test_rtree.rs  test_serialization.rs  utils.rs
