[package]
name = "spart"
version = "0.1.3"
description = "A collection of space partitioning tree data structures for Rust"
repository = "https://github.com/habedi/spart"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["quadtree", "kdtree", "r-tree", "octree", "spatial-index"]
authors = ["Hassan Abedi <hassan.abedi.t@gmail.com>"]
homepage = "https://github.com/habedi/spart"
documentation = "https://docs.rs/spart"
categories = ["data-structures", "algorithms"]
edition = "2021"

[lib]
name = "spart"
path = "src/lib.rs"

[dependencies]
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
ordered-float = "5.0.0"
ctor = "0.4.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "main"
harness = false

[profile.release]
strip = "symbols"
codegen-units = 1
lto = true

[profile.bench]
debug = true

[profile.test]
debug = true

[package.metadata.rustfmt]
max_width = 100
hard_tabs = false
tab_spaces = 4
