[package]
name = "spart"
version = "0.4.2"
description = "A collection of space partitioning tree data structures for Rust"
repository = "https://github.com/habedi/spart"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["quadtree", "kdtree", "r-tree", "octree", "spatial-index"]
authors = ["Hassan Abedi <hassan.abedi.t@gmail.com>"]
homepage = "https://github.com/habedi/spart"
documentation = "https://docs.rs/spart"
categories = ["data-structures", "algorithms"]
edition = "2021"
rust-version = "1.83.0"

resolver = "2"

[lib]
name = "spart"
path = "src/lib.rs"

[dependencies]
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", optional = true }
ordered-float = "5.0.0"
ctor = { version = "0.6.0", optional = true }
serde = { version = "1.0.209", features = ["derive"], optional = true }
bincode = { version = "1.3.3", optional = true }

[features]
default = []
serde = ["dep:serde", "dep:bincode"]
enable_log = ["tracing/log"]
setup_tracing = ["dep:tracing-subscriber", "dep:ctor"]

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
anyhow = "1.0.86"
bincode = "1.3.3"
spart = { path = ".", features = ["serde"] }
proptest = "1.5.0"

[[bench]]
name = "main"
harness = false

[profile.release]
strip = "symbols"
codegen-units = 1
lto = true

[profile.bench]
inherits = "release"

[profile.test]
debug = true

[[example]]
name = "quadtree"
path = "examples/quadtree.rs"

[[example]]
name = "octree"
path = "examples/octree.rs"

[[example]]
name = "kdtree"
path = "examples/kdtree.rs"

[[example]]
name = "rtree"
path = "examples/rtree.rs"

[[example]]
name = "rstar_tree"
path = "examples/rstar_tree.rs"

[package.metadata.rustfmt]
max_width = 100
hard_tabs = false
tab_spaces = 4
