[package]
name = "pyspart"
version = "0.5.1"
edition = "2024"
publish = false

[lib]
name = "pyspart"
crate-type = ["cdylib"]
doc = false

[dependencies]
pyo3 = { version = "=0.25.1", features = ["abi3-py310", "extension-module", "auto-initialize", "serde"] }
spart = { path = "..", features = ["serde"] }
serde = { version = "1.0.209", features = ["derive"] }
bincode = "=1.3.3"
